--- a/package.json
+++ b/package.json
@@ -21,17 +21,21 @@
     "@types/cookie-session": "^2.0.44",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "bcrypt": "^5.1.1",
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.1",
     "@types/jest": "^29.5.0",
+    "@types/nodemailer": "^6.4.13",
     "@types/supertest": "^2.0.12",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.1",
