--- a/.github/workflows/test-auth.yml
+++ b/.github/workflows/test-auth.yml
@@ -10,4 +10,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: npm install && npm run test:ci
+
+      - name: Install Dependencies and Run Tests
+        run: |
+          npm install
+          npm run test:ci
+        ports:
+            - 80:3000
+
