--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-session": "^1.17.3",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
@@ -34,6 +35,7 @@
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
