--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^5.0.3"
   },
   "devDependencies": {
+    "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
