--- a/package.json
+++ b/package.json
@@ -26,20 +26,22 @@
     "cookie-session": "^2.0.0",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "express-session": "^1.17.3",
+    "express-session": "^1.5.0",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/express-session": "^1.17.10",
     "@types/passport": "^1.0.16",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.7",
     "jest": "^29.5.0",
     "mongodb-memory-server": "^8.12.1",
     "supertest": "^6.3.3",
